--- a/css/style.css
+++ b/css/style.css
@@ -430,6 +430,16 @@ ul {
   padding-left: 1.5em;  
 }
 
+@media (hover: none) {
+  .projectButton {
+    opacity: 1;
+  }
+
+  .projectDescription {
+    opacity: 1;
+  }
+}
+
 .icon-list {
   list-style: none;
   padding: 0;
@@ -482,6 +492,7 @@ ul {
   left: 0%;
   object-fit: contain;
 }
+
 
 .mainPiece img.TGA-overlay {
   position: absolute;
